syntax = "proto2";
option java_multiple_files = true;

package ticktrack.proto;

//SUPPORTING MESSAGES
message CommonResponse {
    enum ResponseType {
        Success = 1;
        Failure = 2;
    }
    required string responseText = 1;
    required ResponseType responseType = 2;
}
//SUPPORTING MESSAGES END

//CATEGORY OPERATIONS
message CategoryOp {
    required int64 time = 1;
    required string sender = 2;

    oneof msg {
        CategoryOpRequest categoryOpRequest = 11;
        CategoryOpUpdateRequest categoryOpUpdateRequest = 12;
        CategoryOpGetAllRequest userGroupOpGetAllRequest = 13;
        CategoryOpGetAllResponse userGroupOpGetAllResponse = 14;
        CommonResponse commonResponse = 15;
    }

    message CategoryOpRequest {
        enum OpType {
            Create = 1;
            Deactivate = 2;
        }

        required OpType opType = 1;
        required string categoryName = 2;
    }

    message CategoryOpUpdateRequest {
        required string oldName = 1;
        required string newName = 2;
    }

    message CategoryOpGetAllRequest {
    }

    message CategoryOpGetAllResponse {
        repeated string categoryName = 1;
    }
}
//CATEGORY OPERATIONS END